--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "medicorenl/jira-api-bundle",
+    "name": "taymour/jira-api-bundle",
     "type": "symfony-bundle",
     "description": "Jira REST API integration in Symfony2.",
     "keywords": ["jira", "rest", "symfony"],
@@ -19,7 +19,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "symfony/framework-bundle": ">=2.1.0-dev,<3.0-dev",
+        "symfony/framework-bundle": ">=3.0.0",
         "guzzle/guzzle": "3.5.*"
     },
     "autoload": {
